--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -5,6 +5,13 @@ on:
       - opened
       - edited
   workflow_dispatch:
+  push:
+    branches:
+      - master # master
+      - "dev-*" # dev-new, dev-this-is-new
+      - "feat/**" # feat/new, feat/new/button
+    paths-ignore:
+      - ".github/workflows/*"
 jobs:
   deploy:
     runs-on: ubuntu-latest
